# volumeMounts-policy

./: Cargo.toml  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  metadata.yml
.github/workflows/: release.yml
src/: lib.rs  settings.rs
test_data/: pod_creation.json  pod_creation_volume_mounts_only2.json  settings_reject.yaml
