[package]
name = "volumemounts-policy"
version = "1.0.4"
authors = ["Víctor Cuadrado Juan <vcuadradojuan@suse.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.25.0", default-features = false, features = [
  "v1_32",
] }
kubewarden-policy-sdk = "0.14.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
anyhow = "1.0"

[dev-dependencies]
serde_yaml = "0.9"
